--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "devDependencies": {
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.15"
   },
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "lint": "npx eslint"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
