--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "npx eslint"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "body-parser": "^1.20.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.10"
   }
 }
